# aiolibs-executor

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yaml
aiolibs_executor/: _executor.py
tests/: test_executor.py
