[project]
name = "aiolibs-executor"
description = "Asyncio version of concurrent.futures.Executor"
authors = [
    {name = "Andrew Svetlov",email = "andrew.svetlov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
dynamic = ["version"]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
version = "0.0.0"
